--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,3 +4,14 @@
   <span>{{item.name}} </span>
   <span>{{item.price | currency}}</span>
 </div>
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+  Name
+  <br>
+  <input id="name" type="text" formControlName="name">
+  <br>
+  Address
+  <br>
+  <input id="address" type="text" formControlName="address">
+  <br>
+  <button class="button" type="submit"> Get it</button>
+</form>
